# multimodal-fashion-recommender

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: evaluate.py  train.py
src/recommender/: __init__.py  api.py  cli.py  config.py  data.py  logging_utils.py  models.py  pipeline.py  production_pipeline.py  retrieval.py  train.py  utils.py
tests/: conftest.py  test_config.py  test_integration_pipeline.py
ui/: app.js  index.html  style.css
